# desktop-apps

./: README.md
.docker/: desktop-apps.bake.Dockerfile
.github/workflows/: build-windows.yml
common/loginpage/locale/: ar-SA.js  be.js  bg.js  ca.js  cs.js  da.js  de.js  el.js  en-GB.js  es.js  et.js  fi.js  fr.js  ga.js  gl.js  he.js  hr.js  hu.js  hy.js  id.js  it.js  ja.js  ko.js  lo.js  lt.js  lv.js  nl.js  no.js  pl.js  pt-BR.js  pt-PT.js  ro.js  ru.js  sk.js  sl.js  sq.js  sr-Cyrl-RS.js  sr-Latn-RS.js  sv.js  tr.js  (+5 more)
common/loginpage/src/: base.js  dialogconnect.js  dlglogin.js  events.js  locale.js  menu.js  model.js  panelabout.js  panelconnect.js  panelexternal.js  panelfolders.js  panelrecent.js  panels.js  panelsettings.js  paneltemplates.js  panelwelcome.js  sdk.js  utils.js
macos/ONLYOFFICE/: AppDelegate.h  AppDelegate.mm  main.mm
macos/ONLYOFFICE/Code/Controllers/About/: ASCAboutController.h  ASCAboutController.m
macos/ONLYOFFICE/Code/Controllers/CertificatePreview/: ASCCertificatePreviewController.h  ASCCertificatePreviewController.m  ASCCertificatePreviewTextViewController.h  ASCCertificatePreviewTextViewController.m  ASCCertificatePreviewTextWindowController.h  ASCCertificatePreviewTextWindowController.m  ASCCertificateQLPreview.h  ASCCertificateQLPreview.m  ASCCertificateQLPreviewController.h  ASCCertificateQLPreviewController.m
macos/ONLYOFFICE/Code/Controls/: ASCButton.h  ASCButton.m  ASCButtonCell.h  ASCButtonCell.m  ASCMenuButtonCell.h  ASCMenuButtonCell.m  ASCSavePanelWithFormatController.h  ASCSavePanelWithFormatController.m
macos/ONLYOFFICE/Code/Extensions/: NSApplication+Extensions.h  NSApplication+Extensions.m  NSColor+Extensions.h  NSColor+Extensions.m  NSDictionary+Extensions.h  NSDictionary+Extensions.m  NSImage+Extensions.h  NSImage+Extensions.m  NSLayoutConstraint+Extensions.h  NSString+Extensions.h  NSString+Extensions.mm  NSView+Extensions.h  NSView+Extensions.m  NSWindow+Extensions.h  NSWindow+Extensions.m
macos/ONLYOFFICE/Code/Utils/: ASCBlockHolder.h  ASCBlockHolder.m  ASCConstants.h  ASCConstants.m  ASCEditorJSVariables.h  ASCEditorJSVariables.mm  ASCHelper.h  ASCHelper.m  ASCMulticastDelegate.h  ASCMulticastDelegate.m  ASCReplacePresentationAnimator.h  ASCReplacePresentationAnimator.mm  ASCSharedSettings.h  ASCSharedSettings.m  ascprinter.h
macos/ONLYOFFICE/Code/Views/: ASCDownloadCellView.h  ASCDownloadCellView.m  ASCPopoverLightView.h  ASCPopoverLightView.m  ASCTitleBackground.h  ASCTitleBackground.m  NSCefData.h  NSCefData.mm  NSCefView.h  NSCefView.mm
package/: Makefile
package/rpm/: common.spec
win-linux/: CMakeLists.txt  defaults.pri  resources.qrc
win-linux/extras/projicons/src/: jumplist.cpp  jumplist.h  main.cpp  version.h
win-linux/extras/update-daemon/src/: version.h
win-linux/extras/update-daemon/src/classes/: cjson.cpp  cjson.h  csocket.cpp  csocket.h  csvcmanager.cpp  csvcmanager.h  ctimer.cpp  ctimer.h
win-linux/extras/update-daemon/src/classes/platform_linux/: capplication.cpp  capplication.h  cdownloader.cpp  cdownloader.h  ctimer.cpp  ctimer.h  cunzip.cpp  cunzip.h
win-linux/extras/update-daemon/src/classes/platform_win/: capplication.cpp  capplication.h  cdownloader.cpp  cdownloader.h  ctimer.cpp  ctimer.h  cunzip.cpp  cunzip.h
win-linux/extras/update-daemon/src/platform_linux/: main.cpp  utils.cpp  utils.h
win-linux/extras/update-daemon/src/platform_win/: main.cpp  svccontrol.cpp  svccontrol.h  utils.cpp  utils.h
win-linux/res/: gresource.xml
win-linux/res/styles/: styles.qss  styles@1.25x.qss  styles@1.5x.qss  styles@1.75x.qss  styles@2.25x.qss  styles@2.5x.qss  styles@2.75x.qss  styles@2x.qss  styles@3.5x.qss  styles@3x.qss  styles@4.5x.qss  styles@4x.qss  styles@5x.qss
win-linux/src/: cappeventfilter.h  cascapplicationmanagerwrapper.cpp  cascapplicationmanagerwrapper.h  cascapplicationmanagerwrapper_private.h  casctabdata.cpp  casctabdata.h  ccefeventsgate.h  ccefeventstransformer.cpp  ccefeventstransformer.h  ceditortools.cpp  ceditortools.h  ceventdriver.cpp  ceventdriver.h  cfilechecker.h  chelp.cpp  chelp.h  clangater.h  clogger.cpp  clogger.h  cmyapplicationmanager.h  cprintdata.cpp  cprintdata.h  cproviders.cpp  cproviders.h  csplash.cpp  csplash.h  cstyletweaks.cpp  cstyletweaks.h  ctabstyle.cpp  ctabstyle.h  cthemes.cpp  cupdatemanager.cpp  cupdatemanager.h  cwindowsqueue.h  defines.h  iconfactory.cpp  iconfactory.h  main.cpp  utils.cpp  utils.h  (+1 more)
win-linux/src/components/: asctabwidget.cpp  asctabwidget.h  canimatedicon.h  casclabel.cpp  casclabel.h  cdownloadwidget.cpp  cdownloadwidget.h  celipsislabel.cpp  celipsislabel.h  cfiledialog.cpp  cfiledialog.h  cfullscrwidget.cpp  cfullscrwidget.h  cmenu.cpp  cmenu.h  cmessage.cpp  cmessage.h  cnotification.cpp  cnotification.h  cprintdialog.cpp  cprintdialog.h  cprintprogress.cpp  cprintprogress.h  cpushbutton.cpp  cpushbutton.h  csvgpushbutton.cpp  csvgpushbutton.h  ctabbar.cpp  ctabbar.h  ctabpanel.h  ctooltip.cpp  ctooltip.h  editorwidget.h
win-linux/src/platform_linux/: cdialogopenssl.h  gtkprintdialog.cpp  gtkutils.cpp  gtkutils.h  linux_window_utils.cpp  linux_window_utils.h  singleapplication.cpp  singleapplication.h  xcbutils.cpp  xcbutils.h  xdgdesktopportal.cpp
win-linux/src/platform_win/: association.cpp  association.h  filechooser.cpp  filechooser.h  printdialog.cpp  printdialog.h  singleapplication.cpp  singleapplication.h
win-linux/src/prop/: cascapplicationmanagerwrapperintf.h  cmainpanelimpl.cpp  cmainpanelimpl.h  cmainwindowimpl.cpp  cmainwindowimpl.h  csplash_p.h  utils.cpp
win-linux/src/windows/: ceditorwindow.cpp  ceditorwindow.h  ceditorwindow_p.h  cmainwindow.cpp  cmainwindow.h  cpresenterwindow.cpp  cpresenterwindow.h  cwindowbase.cpp  cwindowbase.h
win-linux/src/windows/platform_linux/: cplatformdecoration.cpp  cplatformdecoration.h  cwindowplatform.cpp  cwindowplatform.h  cx11caption.cpp  cx11decoration.cpp  cx11decoration.h  gtk_addon.cpp  gtk_addon.h
win-linux/src/windows/platform_win/: caption.h  cwindowplatform.cpp  cwindowplatform.h
(+56 files in other folders)
